--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     </style>
 </head>
 <body>
+    <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="141.html">News</a></li>
+   </ul>
     <h1>js задачки </h1> <hr> <h3>базовый синтаксис js</h3>
     <ul>
         <li>идентификаторы, зарезервированные слова</li>
