--- a/141.html
+++ b/141.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="141.html">News</a></li>
+   </ul>
     <script>
         c=+prompt('vvedite pervoye chislo');
         d=+prompt('vvedite vtoroye chislo');
